Fix layout overlap issue on medium size screens

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -16,12 +16,12 @@
 }
 
 .front, .back {
-  // width: 100%;
-  // height: 100%;
+  width: 100%;
+  height: 100%;
  // had to set these to pixel value
  // so the image would not get cut off
-  width: 440px;
-  height: 530px;
+  // width: 100%;
+  // height: 530px;
   backface-visibility: hidden;
   position: absolute;
   top: 0;
@@ -45,49 +45,48 @@
     overflow: hidden;
     position: relative;
   }
-  
+
   .wrapper {
     min-height: 100vh;
     min-width: 100vw;
     margin-top: 0;
     position: relative;
   }
-  
+
   .main-section {
     top: 150px;
     width: 100%;
     padding: 150px 0 0;
   }
-  
+
   .hero-section{
+    width: 440px;
     height: 530px;
-    width: 400px;
     margin-bottom: 30px;
     h2 {
       color: white;
       font-weight: bold;
       margin-bottom: 10px;
     }
-  
+
     perspective: 1000px;
     color: white;
-    width: 400px;
     position: relative;
-  
+
     &-content {
       position: absolute;
       bottom: 0;
       width: 100%;
       padding: 20px;
       z-index: 1;
-  
+
       &-intro {
         font-size: 17px;
       }
     }
   }
-  
-  
+
+
   .image {
     // width: 440px;
     // height: 530px;
@@ -96,32 +95,32 @@
     background-repeat: no-repat;
     background-position: center;
   }
-  
+
   .image-1 {
     background-image: url('/images/Icon-02.jpg');
   }
-  
+
   .image-2 {
     background-image: url('/images/Icon-02.jpg');
   }
-  
-  
-  
+
+
+
   .hero-welcome-text > h1 {
     color: white;
     text-transform: uppercase;
     font-size: 32px;
     margin-top: 80px;
   }
-  
+
   .hero-welcome-bio {
     margin-top: 20px;
     color: white;
-  
+
     .fa-stack {
       font-size: 28px;
     }
-  
+
     .list-inline-item {
       > a {
         color: #373737;
@@ -132,10 +131,10 @@
   .hero-welcome-bio > h1 {
    font-size: 1.80rem;
   }
-  
+
   .hero-welcome-wrapper {
     justify-content: flex-end;
-  
+
   }
 
   @media (max-width: 850px) {
@@ -145,34 +144,33 @@
     }
 
   }
-  
+
   // @media (max-width: 500px) {
   //   .hero-section {
   //     display: none;
   //   }
   // }
-  
+
   @media (max-width: 992px) {
     .hero-section {
-      // width: 330px;
-  
-      // &-content {
-      //   width: 330px;
-      // }
-      width: 400px;
+      width: 330px;
+
+      &-content {
+        width: 330px;
+      }
     }
-  
+
     .hero-welcome-text > h1 {
       margin-top: 0px;
     }
   }
-  
+
   .background-image {
     position: absolute;
     width: 1762px;
     height: 493px;
   }
-  
+
   .shadow-custom {
     width: 100%;
     height: 100%;
@@ -180,16 +178,15 @@
     top: 0;
     box-shadow: -17px 13px 41px rgba(13,78,158,0.6);
     border: 2px solid #d9c9f8;
-  
+
     .shadow-inner {
       width: 100%;
       height: 100%;
       box-shadow: -17px 13px 13px rgba(0,0,0,0.09);
     }
   }
-  
+
   .shadow-custom-orange {
     box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
     order: 2px solid #d9c9f8;
   }
-  
